bug fix of landing page having scrollable white space at the bottom. set overflow-y, html, body in App.css to hidden

--- a/portfolio-site-v2/src/App.css
+++ b/portfolio-site-v2/src/App.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   height: 100%;
   font-family: 'PT Sans', sans-serif;
+  overflow-y: hidden;
 }
 
 .close-btn {
